--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "cSpell.words": [
+    "appgw",
+    "applicationgateway",
     "applicationgatewaysubnet",
     "kvsu",
     "managedidentity",
     "publicipaddress",
     "resourcegroup",
-    "userassignedidentity"
+    "userassignedidentity",
+    "versionless"
   ]
 }
