Support for connecting to Virtual WAN

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,11 @@
     "applicationgatewaysubnet",
     "kvsu",
     "managedidentity",
+    "networksecuritygroup",
     "publicipaddress",
     "resourcegroup",
     "userassignedidentity",
-    "versionless"
+    "versionless",
+    "virtualwan"
   ]
 }
