--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "resourcegroup",
     "userassignedidentity",
     "versionless",
-    "virtualwan"
+    "virtualnetwork",
+    "virtualwan",
+    "vwan"
   ]
 }
