Add route table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,17 @@
     "appgw",
     "applicationgateway",
     "applicationgatewaysubnet",
+    "australiacentral",
+    "australiaeast",
+    "australiasoutheast",
+    "brazilsouth",
+    "brazilsoutheast",
     "kvsu",
     "managedidentity",
     "networksecuritygroup",
     "publicipaddress",
     "resourcegroup",
+    "routetable",
     "userassignedidentity",
     "versionless",
     "virtualnetwork",
