Adds support for WAF_v2 SKU for App GW Adds support for diagnostic settings Updates resource types to uppercase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
     "appgw",
     "applicationgateway",
     "applicationgatewaysubnet",
+    "applicationgatewaywebapplicationfirewallpolicy",
     "australiacentral",
     "australiaeast",
     "australiasoutheast",
     "brazilsouth",
     "brazilsoutheast",
+    "CRHE",
     "kvsu",
     "managedidentity",
     "networksecuritygroup",
